0.8.15
------
  * Disable memory cgroup in kdump kernel
  * Limit the number of CPUs on all architectures
  * Increase udevd memory requirements
  * If possible, use wicked to determine network mode

0.8.14
------
  * Disable ACPI memory hotplug in kdump kernel
  * Update kernel and initrd estimates
  * Bugfix: install mount-kdump.sh to dracut module directory

0.8.13
------
  * Store current configuration if KDUMP_NETCONFIG is static
  * Modify kdump udev rules to work with systemd (and clean them up)
  * Support percent-encoded URLs for KDUMP_SAVEDIR

0.8.12
------
  * Add "ssh" target protocol to transfer the file over the standard input
    to a remote host using the standard ssh client
  * Prevent double mount of the root file system
  * Allow taking remote dumps without mounting any file systems

0.8.11
------
  * Use fast xz compression with dracut
  * Mount boot/root partition only if needed

0.8.10
------
  * Support snappy compression algorithm
  * Improved algorithm for "calibrate"
  * Network support for dracut
  * Filter out DomU pages, when dumping a Xen virtualization host
  * Do not try to copy separate debuginfo files
  * Unit test for FilePath::listDir()
  * delete_dumps: ignore non-kdump directories

0.8.9
-----
  * Fixed dracut hook install
  * Fix /kdump/boot link if /boot is not on a separate partition
  * Fix debug mode in load_kdump()

0.8.8
-----
  * Support as a dracut module
  * New kdumptool command: calibrate
  * New kdumptool flag: NOSPLIT
  * Add disable_cpu_apicid parameter to the command line on x86 to prevent
    bringing up the BSP in the kdump kernel.
  * Use nr_cpus instead of maxcpus with recent kernels.

0.8.7
-----
  * Change libelf interface to elfutils (libelf1)
  * Fix parsing of command line options (e.g. --dump for save_dump)
  * Add new tests
  * Many code cleanups

0.8.6
-----
  * Support for IPv6 targets
  * Unmount all filesystems before rebooting in the kdump environment

0.8.5
-----